intel/bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/log.txt
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:19:7: error: case value evaluates to 2147755008, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042400:        // VDS_E_NOT_SUPPORTED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:21:7: error: case value evaluates to 2147755009, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042401:        // VDS_E_INITIALIZED_FAILED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:23:7: error: case value evaluates to 2147755010, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042402:        // VDS_E_INITIALIZE_NOT_CALLED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:25:7: error: case value evaluates to 2147755011, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042403:        // VDS_E_ALREADY_REGISTERED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:27:7: error: case value evaluates to 2147755012, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042404:        // VDS_E_ANOTHER_CALL_IN_PROGRESS
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:29:7: error: case value evaluates to 2147755013, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042405:        // VDS_E_OBJECT_NOT_FOUND
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:31:7: error: case value evaluates to 2147755014, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042406:        // VDS_E_INVALID_SPACE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:33:7: error: case value evaluates to 2147755015, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042407:        // VDS_E_PARTITION_LIMIT_REACHED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:35:7: error: case value evaluates to 2147755016, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042408:        // VDS_E_PARTITION_NOT_EMPTY
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:37:7: error: case value evaluates to 2147755017, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042409:        // VDS_E_OPERATION_PENDING
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:39:7: error: case value evaluates to 2147755018, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240A:        // VDS_E_OPERATION_DENIED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:41:7: error: case value evaluates to 2147755019, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240B:        // VDS_E_OBJECT_DELETED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:43:7: error: case value evaluates to 2147755020, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240C:        // VDS_E_CANCEL_TOO_LATE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:45:7: error: case value evaluates to 2147755021, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240D:        // VDS_E_OPERATION_CANCELED
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:47:7: error: case value evaluates to 2147755022, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240E:        // VDS_E_CANNOT_EXTEND
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:49:7: error: case value evaluates to 2147755023, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x8004240F:        // VDS_E_NOT_ENOUGH_SPACE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:51:7: error: case value evaluates to 2147755024, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042410:        // VDS_E_NOT_ENOUGH_DRIVE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:53:7: error: case value evaluates to 2147755025, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042411:        // VDS_E_BAD_COOKIE
             ^
bench_214/extr_.rufussrcstdio.c_GetVdsError_with_main/extr_.rufussrcstdio.c_GetVdsError_with_main.c:55:7: error: case value evaluates to 2147755026, which cannot be narrowed to type 'DWORD' (aka 'int') [-Wc++11-narrowing]
        case 0x80042412:        // VDS_E_NO_MEDIA
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
HLS FPGA Parse FAILED.
